--- a/dmu1/dmu1_ml_ELAIS-N1/notebook_output/1.1_INT-WFC.html
+++ b/dmu1/dmu1_ml_ELAIS-N1/notebook_output/1.1_INT-WFC.html
@@ -21128,16 +21128,7 @@ XQghhKgwktyFEEKICiPJXQghhKgw/wfMyVDzWvaevwAAAABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="V---Flagging-objects-near-bright-stars">V - Flagging objects near bright stars<a class="anchor-link" href="#V---Flagging-objects-near-bright-stars">&#182;</a></h2>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="VI---Saving-to-disk">VI - Saving to disk<a class="anchor-link" href="#VI---Saving-to-disk">&#182;</a></h1>
+<h1 id="V---Saving-to-disk">V - Saving to disk<a class="anchor-link" href="#V---Saving-to-disk">&#182;</a></h1>
 </div>
 </div>
 </div>
