--- a/dmu1/dmu1_ml_ELAIS-N1/notebook_output/1.6_SERVS.html
+++ b/dmu1/dmu1_ml_ELAIS-N1/notebook_output/1.6_SERVS.html
@@ -11786,7 +11786,7 @@ Lucia told that the magnitudes are aperture corrected.</p>
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>This notebook was run with herschelhelp_internal version: 
-39887e6 (Tue Jun 27 15:21:21 2017 +0100)
+56042ea (Thu Aug 3 18:51:31 2017 +0100)
 </pre>
 </div>
 </div>
@@ -11862,16 +11862,16 @@ Lucia told that the magnitudes are aperture corrected.</p>
         <span class="s1">&#39;internal_id&#39;</span><span class="p">:</span> <span class="s2">&quot;servs_intid&quot;</span><span class="p">,</span>
         <span class="s1">&#39;ra_12&#39;</span><span class="p">:</span> <span class="s2">&quot;servs_ra&quot;</span><span class="p">,</span>
         <span class="s1">&#39;dec_12&#39;</span><span class="p">:</span> <span class="s2">&quot;servs_dec&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;flux_aper_2_1&#39;</span><span class="p">:</span> <span class="s2">&quot;f_ap_servs_irac1&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;fluxerr_aper_2_1&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_ap_servs_irac1&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;flux_auto_1&#39;</span><span class="p">:</span> <span class="s2">&quot;f_servs_irac1&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;fluxerr_auto_1&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_servs_irac1&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;class_star_1&#39;</span><span class="p">:</span> <span class="s2">&quot;servs_stellarity_irac1&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;flux_aper_2_2&#39;</span><span class="p">:</span> <span class="s2">&quot;f_ap_servs_irac2&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;fluxerr_aper_2_2&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_ap_servs_irac2&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;flux_auto_2&#39;</span><span class="p">:</span> <span class="s2">&quot;f_servs_irac2&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;fluxerr_auto_2&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_servs_irac2&quot;</span><span class="p">,</span>
-        <span class="s1">&#39;class_star_2&#39;</span><span class="p">:</span> <span class="s2">&quot;servs_stellarity_irac2&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;flux_aper_2_1&#39;</span><span class="p">:</span> <span class="s2">&quot;f_ap_servs_irac_i1&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;fluxerr_aper_2_1&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_ap_servs_irac_i1&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;flux_auto_1&#39;</span><span class="p">:</span> <span class="s2">&quot;f_servs_irac_i1&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;fluxerr_auto_1&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_servs_irac_i1&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;class_star_1&#39;</span><span class="p">:</span> <span class="s2">&quot;servs_stellarity_irac_i1&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;flux_aper_2_2&#39;</span><span class="p">:</span> <span class="s2">&quot;f_ap_servs_irac_i2&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;fluxerr_aper_2_2&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_ap_servs_irac_i2&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;flux_auto_2&#39;</span><span class="p">:</span> <span class="s2">&quot;f_servs_irac_i2&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;fluxerr_auto_2&#39;</span><span class="p">:</span> <span class="s2">&quot;ferr_servs_irac_i2&quot;</span><span class="p">,</span>
+        <span class="s1">&#39;class_star_2&#39;</span><span class="p">:</span> <span class="s2">&quot;servs_stellarity_irac_i2&quot;</span><span class="p">,</span>
     <span class="p">})</span>
 
 
@@ -11952,8 +11952,8 @@ Lucia told that the magnitudes are aperture corrected.</p>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 &lt;Table masked=True length=10&gt;
-<table id="table140017432800056-799204" class="table-striped table-bordered table-condensed">
-<thead><tr><th>idx</th><th>servs_intid</th><th>servs_ra</th><th>servs_dec</th><th>f_ap_servs_irac1</th><th>ferr_ap_servs_irac1</th><th>f_servs_irac1</th><th>ferr_servs_irac1</th><th>servs_stellarity_irac1</th><th>f_ap_servs_irac2</th><th>ferr_ap_servs_irac2</th><th>f_servs_irac2</th><th>ferr_servs_irac2</th><th>servs_stellarity_irac2</th><th>m_ap_servs_irac1</th><th>merr_ap_servs_irac1</th><th>m_servs_irac1</th><th>merr_servs_irac1</th><th>flag_servs_irac1</th><th>m_ap_servs_irac2</th><th>merr_ap_servs_irac2</th><th>m_servs_irac2</th><th>merr_servs_irac2</th><th>flag_servs_irac2</th></tr></thead>
+<table id="table140161597141344-235832" class="table-striped table-bordered table-condensed">
+<thead><tr><th>idx</th><th>servs_intid</th><th>servs_ra</th><th>servs_dec</th><th>f_ap_servs_irac_i1</th><th>ferr_ap_servs_irac_i1</th><th>f_servs_irac_i1</th><th>ferr_servs_irac_i1</th><th>servs_stellarity_irac_i1</th><th>f_ap_servs_irac_i2</th><th>ferr_ap_servs_irac_i2</th><th>f_servs_irac_i2</th><th>ferr_servs_irac_i2</th><th>servs_stellarity_irac_i2</th><th>m_ap_servs_irac_i1</th><th>merr_ap_servs_irac_i1</th><th>m_servs_irac_i1</th><th>merr_servs_irac_i1</th><th>flag_servs_irac_i1</th><th>m_ap_servs_irac_i2</th><th>merr_ap_servs_irac_i2</th><th>m_servs_irac_i2</th><th>merr_servs_irac_i2</th><th>flag_servs_irac_i2</th></tr></thead>
 <thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th></th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>
 <tr><td>0</td><td>1214684</td><td>244.3568301</td><td>54.2574598</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>38.9957758098</td><td>2.42791861385</td><td>106.912439771</td><td>4.53019620398</td><td>0.96</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>19.9224560877</td><td>0.0675990946847</td><td>18.8274293991</td><td>0.0460058534243</td><td>False</td></tr>
 <tr><td>1</td><td>1214933</td><td>244.3568698</td><td>54.2538341</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>25.1660275731</td><td>2.08235665528</td><td>122.247397842</td><td>54.5416272661</td><td>0.63</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>20.3979633297</td><td>0.0898389706238</td><td>18.6819009412</td><td>0.48440965153</td><td>False</td></tr>
@@ -11975,8 +11975,8 @@ require.config({paths: {
     datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'
 }});
 require(["datatables"], function(){
-    console.log("$('#table140017432800056-799204').dataTable()");
-    $('#table140017432800056-799204').dataTable({
+    console.log("$('#table140161597141344-235832').dataTable()");
+    $('#table140161597141344-235832').dataTable({
         "order": [],
         "iDisplayLength": 50,
         "aLengthMenu": [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],
@@ -12017,7 +12017,7 @@ require(["datatables"], function(){
 <div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">SORT_COLS</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;ferr_ap_servs_irac1&#39;</span><span class="p">,</span> <span class="s1">&#39;ferr_ap_servs_irac2&#39;</span><span class="p">]</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">SORT_COLS</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;ferr_ap_servs_irac_i1&#39;</span><span class="p">,</span> <span class="s1">&#39;ferr_ap_servs_irac_i2&#39;</span><span class="p">]</span>
 <span class="n">FLAG_NAME</span> <span class="o">=</span> <span class="s2">&quot;servs_flag_cleaned&quot;</span>
 
 <span class="n">nb_orig_sources</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">catalogue</span><span class="p">)</span>
@@ -21423,16 +21423,7 @@ FovFYrFY5p3/DzCQNotvAjvfAAAAAElFTkSuQmCC
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="V---Flagging-objects-near-bright-stars">V - Flagging objects near bright stars<a class="anchor-link" href="#V---Flagging-objects-near-bright-stars">&#182;</a></h2>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="VI---Saving-to-disk">VI - Saving to disk<a class="anchor-link" href="#VI---Saving-to-disk">&#182;</a></h2>
+<h2 id="V---Saving-to-disk">V - Saving to disk<a class="anchor-link" href="#V---Saving-to-disk">&#182;</a></h2>
 </div>
 </div>
 </div>
