--- a/dmu1/dmu1_ml_GAMA-09/notebook_output/1.3_DECaLS.html
+++ b/dmu1/dmu1_ml_GAMA-09/notebook_output/1.3_DECaLS.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-<title>1.3_DECaLS</title>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>1.3_DECaLS</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
 <style type="text/css">
@@ -13,8 +11,8 @@
 *
 */
 /*!
- * Bootstrap v3.3.6 (http://getbootstrap.com)
- * Copyright 2011-2015 Twitter, Inc.
+ * Bootstrap v3.3.7 (http://getbootstrap.com)
+ * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
@@ -1109,7 +1107,6 @@ a:focus {
   text-decoration: underline;
 }
 a:focus {
-  outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
@@ -2538,7 +2535,6 @@ select[size] {
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
-  outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
@@ -3029,7 +3025,6 @@ select[multiple].input-lg {
 .btn.focus,
 .btn:active.focus,
 .btn.active.focus {
-  outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
@@ -8760,6 +8755,9 @@ body > #header .header-bar {
     margin-left: 10px;
   }
 }
+[dir="rtl"] #ipython_notebook {
+  float: right !important;
+}
 #noscript {
   width: auto;
   padding-top: 16px;
@@ -8962,8 +8960,14 @@ span#login_widget > .button .badge,
  *
  * Author: Jupyter Development Team
  */
+[dir="rtl"] #tabs li {
+  float: right;
+}
 ul#tabs {
   margin-bottom: 4px;
+}
+[dir="rtl"] ul#tabs {
+  margin-right: 0px;
 }
 ul#tabs a {
   padding-top: 6px;
@@ -8986,6 +8990,16 @@ ul.breadcrumb span {
 }
 .list_toolbar .tree-buttons {
   padding-top: 1px;
+}
+[dir="rtl"] .list_toolbar .tree-buttons {
+  float: left !important;
+}
+[dir="rtl"] .list_toolbar .pull-right {
+  padding-top: 1px;
+  float: left !important;
+}
+[dir="rtl"] .list_toolbar .pull-left {
+  float: right !important;
 }
 .dynamic-buttons {
   padding-top: 3px;
@@ -9122,6 +9136,9 @@ ul.breadcrumb span {
 #tree-selector {
   padding-right: 0px;
 }
+[dir="rtl"] #tree-selector a {
+  float: right;
+}
 #button-select-all {
   min-width: 50px;
 }
@@ -9211,6 +9228,9 @@ ul#new-menu {
   left: auto;
   right: 0;
 }
+[dir="rtl"] #new-menu {
+  text-align: right;
+}
 .kernel-menu-icon {
   padding-right: 12px;
   width: 24px;
@@ -9255,6 +9275,9 @@ ul#new-menu {
 }
 #running .panel-group .panel .panel-body .list_container .list_item:last-child {
   border-bottom: 0px;
+}
+[dir="rtl"] #running .col-sm-8 {
+  float: right !important;
 }
 .delete-button {
   display: none;
@@ -9551,6 +9574,7 @@ div.cell.selected.jupyter-soft-selected {
   }
 }
 div.inner_cell {
+  min-width: 0;
   /* Old browsers */
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -9571,11 +9595,6 @@ div.inner_cell {
   box-flex: 1;
   /* Modern browsers */
   flex: 1;
-}
-@-moz-document url-prefix() {
-  div.inner_cell {
-    overflow-x: hidden;
-  }
 }
 /* input_area and input_prompt must match in top border and margin for alignment */
 div.input_area {
@@ -11246,7 +11265,7 @@ div#pager .ui-resizable-handle::after {
 }
 .shortcut_key {
   display: inline-block;
-  width: 20ex;
+  width: 21ex;
   text-align: right;
   font-family: monospace;
 }
@@ -11558,6 +11577,7 @@ ul.typeahead-list > li > a {
   box-shadow: 0px 0px 12px 1px rgba(87, 87, 87, 0.2);
 }
 .terminal-app .terminal {
+  width: 100%;
   float: left;
   font-family: monospace;
   color: white;
@@ -11571,6 +11591,9 @@ ul.typeahead-list > li > a {
 .terminal-app .terminal dummy-screen {
   line-height: 1em;
   font-size: 14px;
+}
+.terminal-app .terminal .xterm-rows {
+  padding: 10px;
 }
 .terminal-app .terminal-cursor {
   color: black;
@@ -11631,8 +11654,10 @@ ul.typeahead-list > li > a {
 .highlight .mh { color: #666666 } /* Literal.Number.Hex */
 .highlight .mi { color: #666666 } /* Literal.Number.Integer */
 .highlight .mo { color: #666666 } /* Literal.Number.Oct */
+.highlight .sa { color: #BA2121 } /* Literal.String.Affix */
 .highlight .sb { color: #BA2121 } /* Literal.String.Backtick */
 .highlight .sc { color: #BA2121 } /* Literal.String.Char */
+.highlight .dl { color: #BA2121 } /* Literal.String.Delimiter */
 .highlight .sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
 .highlight .s2 { color: #BA2121 } /* Literal.String.Double */
 .highlight .se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
@@ -11643,9 +11668,11 @@ ul.typeahead-list > li > a {
 .highlight .s1 { color: #BA2121 } /* Literal.String.Single */
 .highlight .ss { color: #19177C } /* Literal.String.Symbol */
 .highlight .bp { color: #008000 } /* Name.Builtin.Pseudo */
+.highlight .fm { color: #0000FF } /* Name.Function.Magic */
 .highlight .vc { color: #19177C } /* Name.Variable.Class */
 .highlight .vg { color: #19177C } /* Name.Variable.Global */
 .highlight .vi { color: #19177C } /* Name.Variable.Instance */
+.highlight .vm { color: #19177C } /* Name.Variable.Magic */
 .highlight .il { color: #666666 } /* Literal.Number.Integer.Long */
     </style>
 <style type="text/css">
@@ -11780,10 +11807,12 @@ div#notebook {
 <div class="output">
 
 
-<div class="output_area"><div class="prompt"></div>
+<div class="output_area">
+<div class="prompt"></div>
+
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>This notebook was run with herschelhelp_internal version: 
-6b6e8f7 (Thu Oct 5 17:35:30 2017 +0100)
+91cdb7b (Fri Oct 20 11:48:11 2017 +0100)
 </pre>
 </div>
 </div>
@@ -11916,7 +11945,9 @@ div#notebook {
 <div class="output">
 
 
-<div class="output_area"><div class="prompt"></div>
+<div class="output_area">
+<div class="prompt"></div>
+
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>WARNING: UnitsWarning: &#39;1/deg^2&#39; did not parse as fits unit: Numeric factor not supported by FITS [astropy.units.core]
 WARNING: UnitsWarning: &#39;nanomaggy&#39; did not parse as fits unit: At col 0, Unit &#39;nanomaggy&#39; not supported by the FITS standard.  [astropy.units.core]
@@ -11978,9 +12009,11 @@ WARNING: UnitsWarning: &#39;1/arcsec^2&#39; did not parse as fits unit: Numeric 
 <div class="output">
 
 
-<div class="output_area"><div class="prompt"></div>
+<div class="output_area">
+<div class="prompt"></div>
+
 <div class="output_subarea output_stream output_stderr output_text">
-<pre>/home/yroehlly/herschelhelp_internal/herschelhelp_internal/utils.py:76: RuntimeWarning: invalid value encountered in log10
+<pre>/opt/herschelhelp_internal/herschelhelp_internal/utils.py:76: RuntimeWarning: invalid value encountered in log10
   magnitudes = 2.5 * (23 - np.log10(fluxes)) - 48.6
 </pre>
 </div>
@@ -12006,11 +12039,13 @@ WARNING: UnitsWarning: &#39;1/arcsec^2&#39; did not parse as fits unit: Numeric 
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[6]:</div>
+<div class="output_area">
+<div class="prompt output_prompt">Out[6]:</div>
+
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 &lt;Table masked=True length=10&gt;
-<table id="table140132922290360-944963" class="table-striped table-bordered table-condensed">
+<table id="table140637264421664-854431" class="table-striped table-bordered table-condensed">
 <thead><tr><th>idx</th><th>decals_id</th><th>decals_ra</th><th>decals_dec</th><th>f_decam_g</th><th>f_decam_r</th><th>f_decam_i</th><th>f_decam_z</th><th>f_decam_y</th><th>ferr_decam_g</th><th>ferr_decam_r</th><th>ferr_decam_i</th><th>ferr_decam_z</th><th>ferr_decam_y</th><th>f_ap_decam_g</th><th>f_ap_decam_r</th><th>f_ap_decam_i</th><th>f_ap_decam_z</th><th>f_ap_decam_y</th><th>ferr_ap_decam_g</th><th>ferr_ap_decam_r</th><th>ferr_ap_decam_i</th><th>ferr_ap_decam_z</th><th>ferr_ap_decam_y</th><th>m_decam_g</th><th>merr_decam_g</th><th>flag_decam_g</th><th>m_decam_r</th><th>merr_decam_r</th><th>flag_decam_r</th><th>m_decam_i</th><th>merr_decam_i</th><th>flag_decam_i</th><th>m_decam_z</th><th>merr_decam_z</th><th>flag_decam_z</th><th>m_decam_y</th><th>merr_decam_y</th><th>flag_decam_y</th><th>m_ap_decam_g</th><th>merr_ap_decam_g</th><th>m_ap_decam_r</th><th>merr_ap_decam_r</th><th>m_ap_decam_i</th><th>merr_ap_decam_i</th><th>m_ap_decam_z</th><th>merr_ap_decam_z</th><th>m_ap_decam_y</th><th>merr_ap_decam_y</th></tr></thead>
 <tr><td>0</td><td>2</td><td>127.733936317</td><td>1.62537599008</td><td>nan</td><td>33.5131</td><td>43.8543</td><td>nan</td><td>48.0475</td><td>nan</td><td>0.227726</td><td>0.264889</td><td>nan</td><td>0.596272</td><td>nan</td><td>31.949</td><td>42.5602</td><td>nan</td><td>47.4898</td><td>nan</td><td>0.236595</td><td>0.299383</td><td>nan</td><td>1.25193</td><td>nan</td><td>nan</td><td>False</td><td>20.087</td><td>0.00737774</td><td>False</td><td>19.795</td><td>0.00655807</td><td>False</td><td>nan</td><td>nan</td><td>False</td><td>19.6958</td><td>0.013474</td><td>False</td><td>nan</td><td>nan</td><td>20.1389</td><td>0.00804031</td><td>19.8275</td><td>0.00763744</td><td>nan</td><td>nan</td><td>19.7085</td><td>0.0286222</td></tr>
 <tr><td>1</td><td>4</td><td>127.731594448</td><td>1.62651958805</td><td>nan</td><td>5.79705</td><td>22.8942</td><td>nan</td><td>51.7647</td><td>nan</td><td>0.205271</td><td>0.271934</td><td>nan</td><td>1.13397</td><td>nan</td><td>6.86185</td><td>25.3997</td><td>nan</td><td>53.6077</td><td>nan</td><td>0.236595</td><td>0.299383</td><td>nan</td><td>1.64079</td><td>nan</td><td>nan</td><td>False</td><td>21.992</td><td>0.0384454</td><td>False</td><td>20.5007</td><td>0.0128962</td><td>False</td><td>nan</td><td>nan</td><td>False</td><td>19.6149</td><td>0.0237844</td><td>False</td><td>nan</td><td>nan</td><td>21.8089</td><td>0.037436</td><td>20.3879</td><td>0.0127974</td><td>nan</td><td>nan</td><td>19.5769</td><td>0.0332316</td></tr>
@@ -12032,8 +12067,8 @@ require.config({paths: {
     datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'
 }});
 require(["datatables"], function(){
-    console.log("$('#table140132922290360-944963').dataTable()");
-    $('#table140132922290360-944963').dataTable({
+    console.log("$('#table140637264421664-854431').dataTable()");
+    $('#table140637264421664-854431').dataTable({
         "order": [],
         "iDisplayLength": 50,
         "aLengthMenu": [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],
@@ -12099,7 +12134,9 @@ require(["datatables"], function(){
 <div class="output">
 
 
-<div class="output_area"><div class="prompt"></div>
+<div class="output_area">
+<div class="prompt"></div>
+
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.
 Check the NumPy 1.11 release notes for more information.
@@ -12108,7 +12145,9 @@ Check the NumPy 1.11 release notes for more information.
 </div>
 </div>
 
-<div class="output_area"><div class="prompt"></div>
+<div class="output_area">
+<div class="prompt"></div>
+
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>The initial catalogue had 4153642 sources.
 The cleaned catalogue has 4151704 sources (1938 removed).
@@ -12162,7 +12201,9 @@ The cleaned catalogue has 1935 sources flagged as having been cleaned
 <div class="output">
 
 
-<div class="output_area"><div class="prompt"></div>
+<div class="output_area">
+<div class="prompt"></div>
+
 
 
 <div class="output_png output_subarea ">
@@ -13058,7 +13099,9 @@ eZNKDWAqAAAAAElFTkSuQmCC
 
 </div>
 
-<div class="output_area"><div class="prompt"></div>
+<div class="output_area">
+<div class="prompt"></div>
+
 
 
 <div class="output_png output_subarea ">
@@ -16368,7 +16411,9 @@ dYPRgYdowWsAAAAASUVORK5CYII=
 <div class="output">
 
 
-<div class="output_area"><div class="prompt"></div>
+<div class="output_area">
+<div class="prompt"></div>
+
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>RA correction: -0.03571722834294633 arcsec
 Dec correction: -0.030770391330126046 arcsec
@@ -16411,7 +16456,9 @@ Dec correction: -0.030770391330126046 arcsec
 <div class="output">
 
 
-<div class="output_area"><div class="prompt"></div>
+<div class="output_area">
+<div class="prompt"></div>
+
 
 
 <div class="output_png output_subarea ">
@@ -17310,7 +17357,9 @@ YII=
 
 </div>
 
-<div class="output_area"><div class="prompt"></div>
+<div class="output_area">
+<div class="prompt"></div>
+
 
 
 <div class="output_png output_subarea ">
@@ -20104,7 +20153,9 @@ QVQhhBB9jCR3IYQQoo/5/9rdb2+5/CG3AAAAAElFTkSuQmCC
 <div class="output">
 
 
-<div class="output_area"><div class="prompt"></div>
+<div class="output_area">
+<div class="prompt"></div>
+
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>265522 sources flagged.
 </pre>
@@ -20149,4 +20200,8 @@ QVQhhBB9jCR3IYQQoo/5/9rdb2+5/CG3AAAAAElFTkSuQmCC
     </div>
   </div>
 </body>
+
+ 
+
+
 </html>
